# EchoMark

./: .gitignore  README.md  changelog.md  design_proposal.md  main.py  pyproject.toml  research_paper_analysis.md  sandbox.ipynb
data/0_external/: README.md
data/0_raw/: README.md
data/1_interim/: README.md
data/2_final/: README.md
docs/: index.md
docs/data_dictionaries/: README.md
docs/references/: README.md
notebooks/: 01_cd_librosa_exercise.ipynb  02_cd_hidden_echoes.ipynb  04_sj_ddsp_model.ipynb  README.md
output/features/: README.md
output/models/: README.md
output/reports/: README.md
output/reports/figures/: README.md
pipelines/: README.md
pipelines/EchoMark/: features.py
serve/: README.md
src/: download_data.py  embed.py
src/logic/: detect.py  embed.py  utils.py
src/models/ddsp/: dataset.py  evaluation.py  experiments.py  model.py  synthesis.py  train.py  utils.py
src/pipelines/EchoMark/: features.py
src/ui/: __init__.py  ui.py
src/ui/tabs/: 04_sj_ddsp_model.html  __init__.py  detect_tab.py  embed_tab.py  experiments_tab.py  help_tab.py  librosa_tab.py  models_tab.py
test/: test_embed.py  test_utils.py
