[project]
name = "echomark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "sounddevice>=0.5.3",
    "wavfile>=4.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "jedi>=0.19.2",
    "jupyterlab>=4.4.9",
    "jupyterlab-lsp>=5.2.0",
    "python-lsp-server>=1.13.1",
]
