[project]
name = "echomark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wandb",
    "pandas",
    "numpy>=2.3.4",
    "scipy",
    "seaborn",
    "jupyterlab>=4.4.9",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "sounddevice>=0.5.3",
    "wavfile>=4.7.2",
    "pydub>=0.25.1",
    "streamlit>=1.50.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black==21.7b0",
    "isort",
    "autoflake",
    "pylint",
    "pre-commit",
    "ipykernel>=7.0.1",
    "jedi>=0.19.2",
    "jupyterlab-lsp>=5.2.0",
    "python-lsp-server>=1.13.1",
]
